force-app/main/default/objects/Account_ROI__c/Account_ROI__c.object-meta.xml
<CustomObject>
    <label>Account ROI</label>
    <nameField>
        <label>Account ROI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AccountROI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>