force-app/main/default/objects/Account_ROI__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a Lookup field and the Account Name will automatically appear from Account Object</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AccountsROI</relationshipLabel>
    <relationshipName>AccountsROI</relationshipName>
    <type>Lookup</type>
</CustomField>