force-app/main/default/objects/Account_ROI__c/fields/AccountProfit__c.field-meta.xml
<CustomField>
    <fullName>AccountProfit__c</fullName>
    <formula>ROI__r.PAmt__c  *  Invested_Fund__r.Invested_Fund_Percentage__c</formula>
    <inlineHelpText>This is a Formula field to calculate the profit on the Account on the investment</inlineHelpText>
    <label>Account Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>