force-app/main/default/objects/Account_ROI__c/fields/AccountROI__c.field-meta.xml
<CustomField>
    <fullName>AccountROI__c</fullName>
    <formula>(AccountProfit__c /  Invested_Fund__r.InvestmentName__r.IAmtAftFee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is Formula field that gives the %age of Account ROI</inlineHelpText>
    <label>Account ROI %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>