force-app/main/default/objects/Account_ROI__c/fields/Invested_Fund__c.field-meta.xml
<CustomField>
    <fullName>Invested_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a Lookup field and the Invested Fund will automatically appear from Invested Fund Object</inlineHelpText>
    <label>Invested Fund</label>
    <referenceTo>InvestedFund__c</referenceTo>
    <relationshipLabel>AccountsROI</relationshipLabel>
    <relationshipName>AccountsROI</relationshipName>
    <type>Lookup</type>
</CustomField>