force-app/main/default/objects/Account_ROI__c/fields/ROI__c.field-meta.xml
<CustomField>
    <fullName>ROI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a Lookup field and the ROI will automatically appear from ROI Object</inlineHelpText>
    <label>ROI</label>
    <referenceTo>ROI__c</referenceTo>
    <relationshipLabel>AccountsROI</relationshipLabel>
    <relationshipName>AccountsROI</relationshipName>
    <type>Lookup</type>
</CustomField>