force-app/main/default/objects/Account_ROI__c/fields/Total_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment_Amount__c</fullName>
    <formula>AccountName__r.InvestmentAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Investment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>