force-app/main/default/objects/Account_ROI__c/fields/TotalFeeAccount__c.field-meta.xml
<CustomField>
    <fullName>TotalFeeAccount__c</fullName>
    <formula>AccountName__r.TotalFeeAcc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is A Formula field and will give the Total Fee on the account as currency based on different values</inlineHelpText>
    <label>Total Fee(Account)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>