force-app/main/default/objects/Account_ROI__c/fields/TotalInvestmentAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalInvestmentAmount__c</fullName>
    <formula>AccountName__r.InvestmentAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is A Formula field and will give the Total investment amount on the account as currency based on different values</inlineHelpText>
    <label>Total Investment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>