force-app/main/default/objects/Account_ROI__c/fields/TotalProfitAfterFee__c.field-meta.xml
<CustomField>
    <fullName>TotalProfitAfterFee__c</fullName>
    <formula>AccountProfit__c  -  TotalFeeAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is A Formula field and will give the Total profit after Fee on the account as currency based on different values</inlineHelpText>
    <label>Total Profit After Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>